# cargo-ease

./: Cargo.toml  README.md
src/: authors.rs  emoji.rs  git.rs  lib.rs  main.rs  template.rs
